--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Express-REST-API",
+  "name": "BuyAndSale",
   "version": "1.0.0",
-  "description": "",
+  "description": "My Course Project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,10 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.18.3",
-    "cors": "^2.8.5",
-    "express": "4.16.4",
-    "express-validator": "5.3.1",
-    "jsonwebtoken": "8.4.0",
-    "mongoose": "5.4.7"
+    "cloudinary": "1.11.0",
+    "cookie-parser": "1.4.3",
+    "cors": "2.8.4",
+    "express": "4.16.3",
+    "express-fileupload": "0.4.0",
+    "express-session": "1.15.6",
+    "jsonwebtoken": "8.3.0",
+    "mongoose": "5.1.5",
+    "multer": "1.3.1",
+    "passport": "0.4.0",
+    "passport-local": "1.0.0",
+    "validator": "10.4.0"
   }
 }
